tests/good/tests/bad/testReassignUndeclared.grc
// Error: Cannot assign to undeclared variable 'undeclaredVar'
undeclaredVar = "Assigning"
